--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "skooter",
+  "name": "skoter",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,9 +15,11 @@
     "react-github-calendar": "^3.2.2",
     "react-icons": "^4.3.1",
     "react-parallax-tilt": "^1.7.42",
+    "react-particle-image": "^1.0.2",
     "react-pdf": "^5.7.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-text-particles": "^2.4.3",
     "react-tsparticles": "^1.42.2",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
