--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-text-particles": "^2.4.3",
-    "react-tsparticles": "^1.42.2",
+    "react-tsparticles": "^1.43.1",
+    "tsparticles-shape-spiral": "^2.9.3",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
   },
